# browser-export

./: .gitignore  README.md  cspell.config.yaml  pyproject.toml
.github/config/: browser-export.dict
.github/workflows/: run-tests.yaml
browserexport/: save.py
src/web-browser-export/: __main__.py  save.py
src/web-browser-export/browsers/: arc.py  firefox_mobile.py
src/web_browser_export/: __main__.py  merge.py
src/web_browser_export/browsers/: common.py
tests/: test_browserexport.py  test_package.py
